cleaned up detail view clearing