@@ -1,19 +1,20 @@
 package net.marvk.fs.vatsim.map.view.datadetail.clientdetail;
 
 import javafx.beans.binding.Bindings;
+import javafx.beans.property.StringProperty;
 import javafx.fxml.FXML;
 import javafx.scene.control.Label;
-import javafx.scene.control.TextArea;
 import javafx.scene.input.MouseEvent;
 import net.marvk.fs.vatsim.map.data.Client;
 import net.marvk.fs.vatsim.map.view.datadetail.DataDetailPane;
 import net.marvk.fs.vatsim.map.view.datadetail.detailsubview.DataDetailSubView;
 
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
 import java.util.List;
 
 public class ClientDetailView extends DataDetailSubView<ClientDetailViewModel, Client> {
+    @FXML
+    private DataDetailPane root;
     @FXML
     private Label realName;
     @FXML
@@ -22,19 +23,19 @@ public class ClientDetailView extends DataDetailSubView<ClientDetailViewModel, C
     private Label onlineSince;
     @FXML
     private Label server;
-    @FXML
-    private DataDetailPane root;
 
     private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("HH:mmVV");
 
     @Override
-    protected List<TextArea> textAreas() {
-        return Collections.emptyList();
+    protected List<StringProperty> stringProperties() {
+        return List.of(root.headerTextProperty());
     }
 
     @Override
     protected List<Label> labels() {
         return List.of(
+                realName,
+                cid,
                 onlineSince,
                 server
         );
